Bypassed cooldown timers for failed potion throw skills and nerfed movement speed for the Giant Bruin